# gym-cloth

./: .gitignore  README.md  requirements.txt  setup.py
analysis/: README.md  check_demo_data.py  combine_demo_data.py  convert_hdf5_visual_dynamics.py
cfg/: README.md  cloth_from_184.yaml  demo_baselines.yaml  demo_baselines_fixed_t1_color.yaml  demo_baselines_fixed_t1_depth.yaml  demo_baselines_fixed_t2.yaml  demo_baselines_fixed_t2_color.yaml  demo_baselines_fixed_t2_depth.yaml  demo_baselines_fixed_t3_color.yaml  demo_baselines_fixed_t3_depth.yaml  demo_bed.yaml  demo_render.yaml  demo_spaces.yaml  t1_rgbd.yaml  t2_rgbd.yaml  t3_rgbd.yaml
cfg/_json_files/: default184.json  fold.json  pinned2.json  pinned4.json  plane.json  selfCollision.json
examples/: README.md  analytic.py  demo_bed.py  demo_render.py  demo_spaces.py  env_init.py
gym_cloth/: __init__.py
gym_cloth/blender/: get_image_rep_279.py  test.py
gym_cloth/envs/: README.md  __init__.py  cloth_env.py
gym_cloth/physics/: cloth.pyx  gripper.pyx  point.pyx  util.py
logs/: README.md
render/: .gitignore  CMakeLists.txt  README.md
render/CGL/: CMakeLists.txt  README.md
render/CGL/examples/: CMakeLists.txt  event.cpp  template.cpp  text.cpp  triangle.cpp
render/CGL/include/CGL/: CGL.h  color.h  complex.h  matrix3x3.h  matrix4x4.h  quaternion.h  renderer.h  spectrum.h  timer.h  vector2D.h  vector3D.h  vector4D.h  viewer.h
render/CGL/src/: CMakeLists.txt  color.cpp  matrix4x4.cpp  spectrum.cpp  vector2D.cpp  vector3D.cpp  vector4D.cpp  viewer.cpp
render/CGL/tests/: CMakeLists.txt  osd.cpp
render/scene/: pinned2.json  sphere.json
render/shaders/: camera.vert  normal.frag  phong.frag  wireframe.frag
render/src/: CMakeLists.txt  camera.cpp  camera.h  cloth.cpp  cloth.h  clothMesh.cpp  clothMesh.h  clothSimulator.cpp  clothSimulator.h  main.cpp  png.cpp  png.h  pointMass.h  shaderUtils.h  spring.h
render/src/collision/: collisionObject.h  plane.cpp  plane.h  sphere.cpp  sphere.h
render/src/misc/: camera_info.cpp  camera_info.h  camera_ops.cpp  collada_info.h  sphere_drawing.cpp  sphere_drawing.h
